tests/comp/sem/invalid/compare_bool_with_int.mj
class A {

	public void test(boolean foo) {
		foo = foo /*** == 3 ***/;
	}

	public static void main(String[] args) {
	}

}
